[package]
name = "saved_in_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
fern = "0.6.1"
log = "0.4.17"
tar = "0.4.38"
zstd = "0.12.1"
